--- a/webroot/elfinder/elfinder-ckeditor.html
+++ b/webroot/elfinder/elfinder-ckeditor.html
@@ -18,11 +18,26 @@
 
 		<!-- elFinder initialization (REQUIRED) -->
 		<script type="text/javascript" charset="utf-8">
-			$().ready(function() {
-				var elf = $('#elfinder').elfinder({
-					url : 'php/connector.php'  // connector URL (REQUIRED)
-				}).elfinder('instance');
-			});
+	    // Helper function to get parameters from the query string.
+	    function getUrlParam(paramName) {
+        var reParam = new RegExp('(?:[\?&]|&amp;)' + paramName + '=([^&]+)', 'i') ;
+        var match = window.location.search.match(reParam) ;
+        
+        return (match && match.length > 1) ? match[1] : '' ;
+	    }
+	
+	    $().ready(function() {
+        var funcNum = getUrlParam('CKEditorFuncNum');
+
+        var elf = $('#elfinder').elfinder({
+          url : 'php/connector.php',
+          getFileCallback : function(file) {
+            window.opener.CKEDITOR.tools.callFunction(funcNum, file);
+            window.close();
+          },
+          resizable: false
+        }).elfinder('instance');
+	    });
 		</script>
 	</head>
 	<body>
