--- a/webroot/elfinder/elfinder-tinymce.html
+++ b/webroot/elfinder/elfinder-tinymce.html
@@ -20,7 +20,13 @@
 		<script type="text/javascript" charset="utf-8">
 			$().ready(function() {
 				var elf = $('#elfinder').elfinder({
-					url : 'php/connector.php'  // connector URL (REQUIRED)
+          url : 'php/connector.php',
+          getFileCallback : function(url) {
+            path = url.replace(window.location.protocol + '//' + window.location.host, '');
+            window.opener.document.getElementById(window.opener.browserField).value = path;
+            window.opener.focus();
+            window.close();
+          },
 				}).elfinder('instance');
 			});
 		</script>
